--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     , "url": "git://github.com/martynovs/poker-eval-node.git"
   }
   , "main": "index.js"
-  , "dependencies": {}
+  , "dependencies": {
+      "coffee-script": ">= 1.3"
+    , "underscore": ">= 1.3"
+  }
   , "devDependencies": {}
   , "optionalDependencies": {}
   , "engines": {
