--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     , "url": "git://github.com/martynovs/poker-eval-node.git"
   }
   , "main": "index.js"
-  , "dependencies": {
-      "coffee-script": ">= 1.3"
-    , "underscore": ">= 1.3"
-  }
+  , "dependencies": {}
   , "devDependencies": {}
   , "optionalDependencies": {}
   , "engines": {
