add executable to parse hands

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   , "engines": {
     "node": "*"
   }
+  , "bin": {
+    "poker-eval": "./bin/poker-eval"
+  }
   , "scripts": {
       "preinstall" : "node-waf configure && node-waf build"
     , "preuninstall" : "rm -rf build/*"
